# rust-nexus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  Development Plan.md  Dockerfile  Dockerfile.agent  Fiber Weaver.md  README.md  ROADMAP.md  STATUS.md  d3tect-nexus-transformation.md  deny.toml  docker-compose.yml  gov-nexus-requirements.md  grpc-proxy-config.txt  nexus-dev.toml  nexus-working.toml  nexus-working.toml.example  nexus.toml.example
.github/workflows/: acme-staging.yml  ci.yml  docker.yml  security-audit.yml  tauri-build.yml
certs/: generate_dev_certs.sh
config/: agent-linux.toml  agent-linux.toml.example  agent-windows.toml  agent-windows.toml.example  capabilities.example.json
dev-team-platform/: README.md  docker-compose.yml  package.json
docs/: COMPLETE_SETUP_GUIDE.md  ROADMAP.md
gov-agent/: Cargo.toml
gov-api/: Cargo.toml
gov-api/src/: error.rs  lib.rs  routes.rs  types.rs
gov-collectors/: Cargo.toml
gov-collectors/src/: lib.rs  ssh_executor.rs  wmi_executor.rs
gov-common/: Cargo.toml
gov-compliance-engine/: Cargo.toml
gov-compliance-engine/src/: control.rs  evidence.rs  framework.rs  lib.rs  mapping.rs  scoring.rs
gov-compliance-engine/src/frameworks/: cis_controls.rs  cmmc.rs  cobit.rs  coso.rs  dora.rs  eu_ai_act.rs  fedramp.rs  fisma.rs  gdpr.rs  hipaa.rs  hitrust.rs  iso22301.rs  iso27001.rs  iso42001.rs  mod.rs  nist_800_171.rs  nist_800_53.rs  nist_csf.rs  pci_dss.rs  soc2.rs  togaf.rs
gov-dashboard/: Cargo.toml
gov-discovery/: Cargo.toml
gov-evidence/: Cargo.toml
gov-evidence/src/: collector.rs  error.rs  lib.rs  storage.rs  types.rs
gov-infra/: Cargo.toml  build.rs
gov-integrations/: Cargo.toml
gov-integrations/src/: connector.rs  error.rs  lib.rs  types.rs
gov-policy/: Cargo.toml
gov-policy/src/: error.rs  evaluator.rs  lib.rs  types.rs
gov-reporting/: Cargo.toml
gov-reporting/src/: error.rs  generator.rs  lib.rs  types.rs
gov-tenancy/: Cargo.toml
gov-tenancy/src/: error.rs  lib.rs  resolver.rs  types.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: a2a_interactive_shell.rs  a2a_loopback.rs  a2a_mtls.rs  v1_3_regression.rs  v1_4_regression.rs
nexus-a2a/: Cargo.toml  VENDORED-VERSION  build.rs
nexus-a2a/examples/: headless_operator.rs
nexus-a2a/proto/a2a/v1/: a2a.proto
nexus-a2a/src/: audit.rs  audit_s3.rs  capabilities.rs  cards.rs  client.rs  framing.rs  handler.rs  insecure.rs  interceptors.rs  lib.rs  metrics.rs  mock.rs  otel.rs  server.rs  tls.rs  tokens.rs
nexus-a2a/tests/: loopback.rs  upstream_compat.rs
nexus-agent/: Cargo.toml  build.rs
nexus-agent/src/: a2a_client.rs  agent.rs  audit.rs  communication.rs  evasion.rs  execution.rs  fiber_execution.rs  lib.rs  main.rs  persistence.rs  registry.rs  smoke.rs  svc.rs  system.rs
nexus-agent/src/shell/: mod.rs  pty.rs  select.rs
nexus-agent/src/transports/: grpc.rs  mesh.rs  mod.rs
nexus-client/: README.md  build-client.sh  package.json  vite.config.js
nexus-client/src-tauri/: Cargo.toml  tauri.conf.linux.json  tauri.conf.windows.json
nexus-client/src-tauri/icons/: icon.icns
nexus-client/src-tauri/src/: commands.rs  grpc_client.rs  main.rs  state.rs  websocket.rs
nexus-common/: Cargo.toml
nexus-common/benches/: crypto_bench.rs
nexus-common/src/: agent.rs  crypto.rs  identity.rs  lib.rs  messages.rs  os.rs  sealed.rs  tasks.rs  technique.rs
nexus-console/src-tauri/: Cargo.toml  tauri.conf.json
nexus-console/src-tauri/capabilities/: default.json
nexus-console/src-tauri/src/: commands.rs  lib.rs  main.rs  session.rs  state.rs
nexus-console/ui/: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  vendor-xterm.mjs
nexus-console/ui/src/: main.rs  tauri_api.rs  types.rs  xterm.rs
nexus-console/ui/src/components/: agent_list.rs  audit_log_viewer.rs  connect_dialog.rs  mod.rs  status_bar.rs  terminal.rs
nexus-console/ui/styles/: app.css
nexus-detection/: Cargo.toml
nexus-detection/src/: lib.rs  types.rs
nexus-detection/src/behavioral/: mod.rs
nexus-detection/src/correlation/: mod.rs  pipeline.rs
nexus-detection/src/litterbox/: deployment.rs  mod.rs
nexus-detection/src/network/: mod.rs
nexus-detection/src/process/: mod.rs
nexus-detection/src/signature/: engine.rs  mod.rs  patterns.rs
nexus-hybrid-exec/: Cargo.toml
nexus-hybrid-exec/src/: api_executor.rs  lib.rs  powershell_executor.rs  ssh_executor.rs  wmi_executor.rs
nexus-infra/: Cargo.toml  build.rs
nexus-infra/proto/: nexus.proto
nexus-infra/src/: a2a_lister.rs  a2a_router.rs  bof_loader.rs  cert_manager.rs  cloudflare.rs  config.rs  domain_manager.rs  grpc_client.rs  grpc_server.rs  letsencrypt.rs  lib.rs  mesh_listener.rs  metrics_server.rs  pki.rs  serve.rs  sessions.rs  soc_server.rs
nexus-infra/tests/: acme_smoke.rs
nexus-mesh/: Cargo.toml
nexus-mesh/examples/: kad_discovery.rs  sealed_pubsub.rs  two_node_ping.rs
nexus-mesh/src/: discovery.rs  dtn.rs  lib.rs  node.rs  topics.rs
nexus-recon/: Cargo.toml
nexus-recon/src/: browser_fingerprint.rs  javascript_engine.rs  lib.rs  network_recon.rs  system_profiler.rs
nexus-server/: Cargo.toml
nexus-server/src/: main.rs
nexus-t1021-006-winrm/: Cargo.toml
nexus-t1021-006-winrm/src/: lib.rs
nexus-t1059-command-scripting/: Cargo.toml
nexus-t1059-command-scripting/src/: lib.rs
nexus-t1547-boot-logon-autostart/: Cargo.toml
nexus-t1547-boot-logon-autostart/src/: lib.rs
nexus-web-comms/: Cargo.toml
nexus-web-comms/src/: domain_fronting.rs  http_fallback.rs  lib.rs  mesh_a2a.rs  traffic_obfuscation.rs  transport.rs  websocket_fallback.rs
nexus-webui/: Cargo.toml
nexus-webui/src/: handlers.rs  lib.rs  static_files.rs  templates.rs  websocket.rs
scripts/: build-agent-bundles.sh  build-linux.sh  build-windows.ps1  build.sh  deliverables-prep.sh  demo.sh  deploy-operator-console.sh  deploy-server-prod.sh  deploy-ubuntu-server.sh  docker-multiarch-verify.sh  gen-certs-prod.sh  gen-certs.sh  operator-package.sh  transfer-prep.sh  vendor-a2a-proto.sh
(+225 files in other folders)
