[workspace]
resolver = "2"
members = [
    "nexus-agent",
    "nexus-common",
    "nexus-infra",
    "nexus-server",
    "nexus-webui",
    "nexus-recon",
    "nexus-hybrid-exec",
    "nexus-web-comms"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security"
] }
thiserror = "1.0"
hostname = "0.3"
local-ip-address = "0.5"

# gRPC and Protocol Buffers - using rustls for TLS
tonic = { version = "0.10", features = ["tls-roots"] }
prost = "0.12"
tonic-build = "0.10"

# TLS and certificates - rustls only
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
rustls-pemfile = "1.0"
x509-parser = "0.15"

# DNS and networking
hickory-resolver = "0.24"

# HTTP client for Cloudflare API - using rustls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Let's Encrypt ACME client
acme-lib = "0.8"
rcgen = "0.11"

# Windows PE/COFF parsing
pelite = "0.10"
goblin = "0.7"

# Configuration management
config = "0.13"
dirs = "5.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
