[package]
name = "gov-compliance-engine"
version = "0.1.0"
edition = "2021"
description = "Compliance engine supporting 20 governance frameworks with cross-mapping"

[dependencies]
gov-common = { path = "../gov-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# For parsing SCAP/OVAL definitions
quick-xml = "0.31"
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true }
