[package]
name = "gov-integrations"
version = "0.1.0"
edition = "2021"
authors = ["Gov-Nexus Team"]
description = "Third-party integrations for compliance data collection"
license = "MIT OR Apache-2.0"
keywords = ["compliance", "integrations", "siem", "governance"]
categories = ["web-programming"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Identifiers and time
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# HTTP client
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
