[package]
name = "gov-policy"
version = "0.1.0"
edition = "2021"
authors = ["Gov-Nexus Team"]
description = "Policy engine for drift detection and compliance enforcement"
license = "MIT OR Apache-2.0"
keywords = ["compliance", "policy", "drift", "governance", "enforcement"]
categories = ["authentication"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Identifiers and time
uuid = { workspace = true }
chrono = { workspace = true }

# Pattern matching
regex = "1.10"

# Cryptography for hashing
sha2 = "0.10"

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
