[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-common = { path = "../nexus-common" }
nexus-infra = { path = "../nexus-infra" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
local-ip-address = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []

# Platform-specific features
windows-specific = []
linux-specific = ["libc"]

# Execution capabilities
bof-loading = []
wmi-execution = []
elf-loading = []
systemd-integration = []

# Communication features
domain-fronting = []
http-fallback = []

# Evasion features
anti-debug = []
anti-vm = []
process-injection = []
