[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-common = { path = "../nexus-common" }
nexus-infra = { path = "../nexus-infra" }
async-trait = { workspace = true }

# ATT&CK technique crates (optional, feature-gated)
nexus-t1059-command-scripting = { path = "../nexus-t1059-command-scripting", optional = true }
nexus-t1547-boot-logon-autostart = { path = "../nexus-t1547-boot-logon-autostart", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
local-ip-address = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []

# Platform-specific features
windows-specific = []
linux-specific = ["libc"]

# Execution capabilities
bof-loading = []
wmi-execution = []
elf-loading = []
systemd-integration = []

# Communication features
domain-fronting = []
http-fallback = []

# Evasion features
anti-debug = []
anti-vm = []
process-injection = []

# ATT&CK technique crates
t1059 = ["dep:nexus-t1059-command-scripting"]
t1547 = ["dep:nexus-t1547-boot-logon-autostart"]

# Named engagement profiles
persistence-kit  = ["t1547"]
red-team-windows = ["t1059", "t1547"]
full             = ["t1059", "t1547"]
