[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_agent"
path = "src/lib.rs"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[dependencies]
nexus-common = { workspace = true }
# Not in workspace.dependencies — intentional (mixed Tonic versions)
nexus-infra = { path = "../nexus-infra" }
async-trait = { workspace = true }

# v1.1 additions (simple-mesh layer).
nexus-a2a = { workspace = true }
nexus-mesh = { workspace = true }
nexus-web-comms = { workspace = true }
libp2p = { workspace = true }
portable-pty = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
# Tonic 0.14 alongside the overlay's 0.10 (Cargo allows mixed versions).
tonic_14 = { package = "tonic", version = "0.14", default-features = false, features = ["transport", "codegen", "router", "channel"] }

# ATT&CK technique crates (optional, feature-gated)
nexus-t1059-command-scripting = { path = "../nexus-t1059-command-scripting", optional = true }
nexus-t1547-boot-logon-autostart = { path = "../nexus-t1547-boot-logon-autostart", optional = true }
nexus-t1021-006-winrm = { path = "../nexus-t1021-006-winrm", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
local-ip-address = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16"
rand = { workspace = true }
# v1.4.9 — per-agent audit log uses tempfile in tests.

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }
windows-service = "0.6"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []

# Platform-specific features
windows-specific = []
linux-specific = ["libc"]

# Execution capabilities
bof-loading = []
wmi-execution = []
elf-loading = []
systemd-integration = []

# Communication features
domain-fronting = []
http-fallback = []

# Evasion features
anti-debug = []
anti-vm = []
process-injection = []

# ATT&CK technique crates
t1059 = ["dep:nexus-t1059-command-scripting"]
t1547 = ["dep:nexus-t1547-boot-logon-autostart"]
t1021-006 = ["dep:nexus-t1021-006-winrm"]

# Named engagement profiles
persistence-kit  = ["t1547"]
lateral-movement = ["t1021-006"]
red-team-windows = ["t1059", "t1547", "t1021-006"]
full             = ["t1059", "t1547", "t1021-006"]

[dev-dependencies]
tempfile = "3"
