[package]
name = "nexus-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing (overlay) deps — preserved verbatim.
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# v1.1 additions (simple-mesh integration layer).
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
serde-big-array = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
