[package]
name = "nexus-hybrid-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# SSH client for remote execution
russh = { version = "0.60", optional = true }
russh-keys = { version = "0.40", optional = true }

# HTTP client for API-based execution
reqwest = { workspace = true, optional = true }

# Command line execution
which = "4.4"

# PowerShell execution support (v1.2 note: pwsh 0.1.0 is a stub crate;
# fixing for v1.2 is out of scope. Feature stays opt-in.)
pwsh = { version = "0.1.0", optional = true }

# Authentication and security
ring = "0.17"
rsa = { version = "0.9", optional = true }

# Date and time handling
chrono = { workspace = true }

# System information
hostname = { workspace = true }

# Local crate dependencies
nexus-common = { path = "../nexus-common" }
# Temporarily commented out due to compilation issues
# nexus-infra = { path = "../nexus-infra" }

# WMI and Windows management (Windows only) — keep at the bottom so the
# unconditional [dependencies] block above is correctly scoped. v1.2.1
# fixes a prior pre-existing bug where this header silently captured
# every subsequent dep, making nexus-common Windows-only.
[target.'cfg(windows)'.dependencies]
wmi = "0.13"
windows-sys = { workspace = true }

[features]
# v1.2.1 disables the default executor features by default because their
# upstream crates (tokio-process 0.2, pwsh 0.1.0) are pre-pre-1.0 and not
# maintained against current tokio/serde. Operators enable explicitly.
default = []
ssh = ["russh", "russh-keys", "rsa"]
wmi = []
api = ["reqwest"]
powershell = ["pwsh"]
cross-platform = ["ssh", "api"]
