[package]
name = "nexus-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-common = { path = "../nexus-common" }

# Core dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# gRPC and Protocol Buffers - using rustls-based TLS
tonic = { workspace = true, features = ["tls-roots", "transport"] }
prost = { workspace = true }
prost-types = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

# TLS and certificates - rustls only
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }

# DNS and networking
hickory-resolver = { workspace = true }

# HTTP client for APIs - using rustls
reqwest = { workspace = true }

# Let's Encrypt ACME
acme-lib = { workspace = true }
rcgen = { workspace = true }
pem = "3.0"

# OpenSSL with vendored feature for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# Configuration
config = { workspace = true }
dirs = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# Date and time
chrono = { workspace = true }
time = "0.3"

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Windows PE/COFF parsing
goblin = { workspace = true }
pelite = { workspace = true }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
