[package]
name = "nexus-infra"
version = "0.1.0"
edition = "2021"

# v1.3.5 — add the nexus-server binary so docs / Dockerfile / k8s
# manifests have a real entry point. Defaults to the A2A service from
# nexus_infra::serve::run_a2a; supports --init-identity for first-run
# NodeIdentity provisioning.
[[bin]]
name = "nexus-server"
path = "src/bin/nexus-server.rs"

[dependencies]
nexus-common = { path = "../nexus-common" }

# v1.1 integration additions (simple-mesh A2A bridge).
nexus-a2a = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
# The A2A trait surface needs tonic 0.14 types (Streaming, Status). The
# overlay code on this crate uses tonic 0.10 as `tonic`. Both coexist:
# new files (a2a_router.rs, serve.rs, sessions.rs) import `tonic_14`.
tonic_14 = { package = "tonic", version = "0.14", default-features = false, features = ["transport", "codegen", "router", "server", "channel"] }
# v1.3.6: Prometheus metrics HTTP server.
axum = { workspace = true }
# v1.3.3: server-side mesh listener (Phase 1.3.3).
nexus-mesh = { workspace = true }
libp2p = { workspace = true }

# Core dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# gRPC and Protocol Buffers - using rustls-based TLS
tonic = { workspace = true, features = ["tls-roots", "transport"] }
prost = { workspace = true }
prost-types = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

# TLS and certificates
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }

# DNS and networking
hickory-dns = { workspace = true }
hickory-resolver = { workspace = true }

# HTTP client for APIs
reqwest = { workspace = true }

# Let's Encrypt ACME
acme-lib = { workspace = true }
rcgen = { workspace = true }
pem = "3.0"

# Configuration
config = { workspace = true }
dirs = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# Date and time
chrono = { workspace = true }
# rcgen 0.11 takes `time::OffsetDateTime` for cert validity bounds; we
# bridge from chrono with `time::OffsetDateTime::from_unix_timestamp(...)`.
time = "0.3"

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Windows PE/COFF parsing
goblin = { workspace = true }
pelite = { workspace = true }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
tempfile = "3"
