[package]
name = "nexus-recon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# HTTP client for fingerprinting requests
reqwest = { workspace = true }

# Web scraping and HTML parsing
scraper = { version = "0.18", optional = true }
html5ever = { version = "0.26", optional = true }

# JavaScript engine for advanced fingerprinting
rquickjs = { version = "0.4", optional = true }

# Networking and DNS resolution
trust-dns-resolver = { workspace = true, optional = true }
local-ip-address = { workspace = true }

# Base64 encoding for data transmission
base64 = { workspace = true }

# Regex for pattern matching
regex = "1.10"

# Cryptographic hashing
sha2 = "0.10"

# Date and time handling
chrono = { workspace = true }

# Local crate dependencies
nexus-common = { path = "../nexus-common" }
# Temporarily commented out due to compilation issues
# nexus-infra = { path = "../nexus-infra" }

[features]
default = ["javascript", "advanced-fingerprinting"]
javascript = ["rquickjs"]
advanced-fingerprinting = ["scraper", "html5ever"]
network-recon = ["trust-dns-resolver"]
