[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"
description = "Nexus C2 gRPC server"
authors = ["Nexus Team"]

[[bin]]
name = "nexus-server"
path = "src/main.rs"

[dependencies]
nexus-infra = { path = "../nexus-infra" }
nexus-common = { path = "../nexus-common" }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Configuration and CLI
clap = { version = "4.4", features = ["derive"] }
config = { workspace = true }
dirs = { workspace = true }
toml = "0.8"

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Signal handling
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Date and time
chrono = { workspace = true }

# Error handling
anyhow = "1.0"
