[package]
name = "nexus-t1059-command-scripting"
version = "0.1.0"
edition = "2021"
description = "MITRE ATT&CK T1059 - Command and Scripting Interpreter"

[dependencies]
nexus-common = { path = "../nexus-common" }
async-trait = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
