[package]
name = "nexus-t1547-boot-logon-autostart"
version = "0.1.0"
edition = "2021"
description = "MITRE ATT&CK T1547 - Boot or Logon Autostart Execution"

[dependencies]
nexus-common = { path = "../nexus-common" }
async-trait = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
