[package]
name = "nexus-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Web server and HTTP handling
warp = "0.3"
mime = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"

# WebSocket support for real-time communication
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Template engine for HTML rendering
askama = { version = "0.12", optional = true }
askama_warp = { version = "0.12", optional = true }

# Static file serving
include_dir = { version = "0.7", optional = true }

# Date and time handling
chrono = { workspace = true }

# Local crate dependencies
nexus-common = { path = "../nexus-common" }
# Temporarily commented out due to compilation issues
# nexus-infra = { path = "../nexus-infra" }

[features]
default = ["full"]
full = ["websockets", "templates", "static-files"]
websockets = []
templates = ["askama", "askama_warp"]
static-files = ["include_dir"]
